<resources>
    <string name="app_name">QuizApp-1</string>
    <string name="quiz_app">QuizApp</string>
    <string name="title_shop">Settings</string>
    <string name="title_gifts">History</string>
    <string name="title_cart">Main</string>
    <string name="title_profile">Profile</string>
    <string name="plus">+</string>
    <string name="minus">-</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="questions_amount">Questions amount:</string>
    <string name="ten">10</string>
    <string name="category">Category</string>
    <string name="difficulty">Difficulty</string>
    <string name="_25">25</string>
    <string name="quiz">Quiz</string>
    <string name="kandy">Kandy</string>
    <string name="negombo">Negombo</string>
    <string name="moratuwa">Moratuwa</string>
    <string name="colombo">Colombo</string>
    <string name="_5_10">5/10</string>
    <string name="tv_settings">Settings</string>
    <string name="tv_share_this_app">Share this app</string>
    <string name="tv_rate_us">Rate us</string>
    <string name="tv_leave_feedback">Leave feedback</string>
    <string name="tv_clear_history">Clear history</string>
    <string name="leave_feedback">Leave feedback</string>
    <string name="rate_us">Rate us</string>
    <string name="share_this_app">Share this app</string>
    <string name="settings">Settings</string>
    <string name="settings_clear_history">Clear history</string>
    <string name="False">Ложь</string>
    <string name="True">Правда</string>
    <string name="finish">Finish</string>
    <string name="skip">Skip</string>
    <string name="no_internet">No internet connection</string>
    <string-array name="category_list">
        <item>All</item>
        <item>General Knowledge</item>
        <item>Entertainment: Books</item>
        <item>Entertainment: Film</item>
        <item>Entertainment: Music</item>
        <item>Entertainment: Musicals &amp; Theatres</item>
        <item>Entertainment: Television</item>
        <item>Entertainment: Video Games</item>
        <item>Entertainment: Board Games</item>
        <item>Science &amp; Nature</item>
        <item>Science: Computers</item>
        <item>Science: Mathematics</item>
        <item>Mythology</item>
        <item>Sports</item>
        <item>Geography</item>
        <item>History</item>
        <item>Politics</item>
        <item>Art</item>
        <item>Celebrities</item>
        <item>Animals</item>
        <item>Vehicles</item>
        <item>Entertainment: Comics</item>
        <item>Science: Gadgets</item>
        <item>Entertainment: Japanese Anime &amp; Manga</item>
        <item>Entertainment: Cartoon &amp; Animations</item>
    </string-array>
    <string-array name="difficulty_list">
        <item>Any</item>
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
    </string-array>
</resources>
