<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/itemTV_question"
        style="@style/ItemQuizQuestionTVStyle"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:padding="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlSymmetry" />

    <LinearLayout
        android:id="@+id/quiz_linear_btnMultiple"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/itemTV_question">

        <Button
            android:id="@+id/quiz_item_btn1"
            style="@style/ItemQuizButtonStyle"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/colombo"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/itemTV_question" />

        <Button
            android:id="@+id/quiz_item_btn2"
            style="@style/ItemQuizButtonStyle"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:text="@string/moratuwa"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/quiz_item_btn1" />

        <Button
            android:id="@+id/quiz_item_btn3"
            style="@style/ItemQuizButtonStyle"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:text="@string/negombo"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/quiz_item_btn2" />

        <Button
            android:id="@+id/quiz_item_btn4"
            style="@style/ItemQuizButtonStyle"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:text="@string/kandy"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/quiz_item_btn3" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/quiz_linear_btnSimple"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/itemTV_question">

        <Button
            android:id="@+id/quiz_item_true"
            style="@style/ItemQuizButtonStyle"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:text="@string/True"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/itemTV_question" />

        <Button
            android:id="@+id/quiz_item_false"
            style="@style/ItemQuizButtonStyle"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="34dp"
            android:text="@string/False"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/quiz_item_true" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>