<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.MainFragment">

    <ImageView
        android:layout_width="50dp"
        android:layout_height="75dp"
        android:layout_marginTop="@dimen/img_top_dim"
        android:src="@drawable/tut"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        style="@style/StyleButton"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginTop="@dimen/startBtn_marginTop"
        app:layout_constraintEnd_toEndOf="@+id/difficulty_spinner"
        app:layout_constraintStart_toStartOf="@+id/difficulty_spinner"
        app:layout_constraintTop_toBottomOf="@id/difficulty_spinner" />

    <TextView
        android:id="@+id/questions_amount"
        android:layout_width="117dp"
        android:layout_height="16dp"
        android:layout_marginTop="@dimen/qa_text_top_dim"
        android:fontFamily="@font/bold"
        android:hint="@string/questions_amount"
        android:textColor="#A9A9A9"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@id/category_spinner"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/amount"
        android:layout_width="19dp"
        android:layout_height="16dp"
        android:fontFamily="@font/bold"
        android:text="@string/_25"
        android:textColor="#000"
        app:layout_constraintStart_toEndOf="@id/questions_amount"
        app:layout_constraintBottom_toBottomOf="@+id/questions_amount"
        app:layout_constraintTop_toTopOf="@id/questions_amount" />

    <TextView
        android:id="@+id/category_text_view"
        android:layout_width="81dp"
        android:layout_height="16dp"
        android:fontFamily="@font/bold"
        android:hint="@string/category"
        android:layout_marginTop="8dp"
        android:textColor="#000"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@id/category_spinner"
        app:layout_constraintTop_toBottomOf="@id/seekBar" />

    <TextView
        android:id="@+id/difficultly_text_view"
        android:layout_width="81dp"
        android:layout_height="16dp"
        android:layout_marginTop="@dimen/difficultly_tv_marginTop"
        android:fontFamily="@font/bold"
        android:hint="@string/difficulty"
        android:textColor="#000"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@id/category_spinner"
        app:layout_constraintTop_toBottomOf="@id/category_spinner" />


    <Spinner
        android:id="@+id/category_spinner"
        android:layout_width="240dp"
        android:layout_height="48dp"
        android:layout_marginTop="@dimen/spinner_marginTop"
        android:entries="@array/category_list"
        android:fontFamily="@font/bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/category_text_view" />

    <Spinner
        android:id="@+id/difficulty_spinner"
        android:layout_width="240dp"
        android:layout_height="48dp"
        android:layout_marginTop="@dimen/spinner_marginTop"
        android:entries="@array/difficulty_list"
        android:fontFamily="@font/bold"
        app:layout_constraintStart_toStartOf="@id/difficultly_text_view"
        app:layout_constraintTop_toBottomOf="@id/difficultly_text_view" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="240dp"
        android:layout_height="21dp"
        android:layout_marginTop="8dp"
        android:max="50"
        android:splitTrack="false"
        android:thumb="@drawable/thumb"
        android:layout_marginEnd="16dp"
        app:layout_constraintStart_toStartOf="@id/category_spinner"
        app:layout_constraintTop_toBottomOf="@id/questions_amount"
        app:layout_constraintEnd_toEndOf="@id/category_spinner"
        tools:targetApi="lollipop" />

    <TextView
        style="@style/BoldText"
        android:layout_width="0dp"
        android:layout_height="28dp"
        android:layout_marginStart="@dimen/title_start_dim"
        android:layout_marginTop="@dimen/title_top_dim"
        android:gravity="center_horizontal|top"
        android:text="@string/quiz"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>