<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/settings_title"
        style="@style/BoldText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:layout_marginTop="32dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/none"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        app:layout_constraintTop_toBottomOf="@+id/settings_title"
        android:layout_marginTop="14dp"
        android:visibility="invisible" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/dark_purple"
        app:layout_constraintTop_toTopOf="@+id/settings_share_this_app" />

    <TextView
        android:id="@+id/settings_share_this_app"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/regular"
        android:padding="20dp"
        android:textSize="18sp"
        android:text="@string/share_this_app"
        android:textColor="@color/dark_purple"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/none" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:src="@drawable/ic_chevron_right"
        app:layout_constraintBottom_toBottomOf="@+id/settings_share_this_app"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/settings_share_this_app" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/dark_purple"
        app:layout_constraintBottom_toBottomOf="@+id/settings_share_this_app" />

    <TextView
        android:id="@+id/settings_rate_us"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackground"
        android:clickable="true"
        android:textSize="18sp"
        android:focusable="true"
        android:fontFamily="@font/regular"
        android:padding="20dp"
        android:text="@string/rate_us"
        android:textColor="@color/dark_purple"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_share_this_app" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:src="@drawable/ic_chevron_right"
        app:layout_constraintBottom_toBottomOf="@+id/settings_rate_us"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/settings_rate_us" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/dark_purple"
        app:layout_constraintBottom_toBottomOf="@+id/settings_rate_us" />

    <TextView
        android:id="@+id/settings_leave_feedback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackground"
        android:clickable="true"
        android:textSize="18sp"
        android:focusable="true"
        android:padding="20dp"
        android:text="@string/leave_feedback"
        android:fontFamily="@font/regular"
        android:textColor="@color/dark_purple"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_rate_us" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:src="@drawable/ic_chevron_right"
        app:layout_constraintBottom_toBottomOf="@+id/settings_leave_feedback"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/settings_leave_feedback" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/dark_purple"
        app:layout_constraintBottom_toBottomOf="@+id/settings_leave_feedback" />

    <TextView
        android:id="@+id/settings_clear_history"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:padding="20dp"
        android:text="@string/settings_clear_history"
        android:textColor="#BE52F2"
        android:textSize="18sp"
        android:fontFamily="@font/regular"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_leave_feedback" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:src="@drawable/ic_chevron_right"
        app:layout_constraintBottom_toBottomOf="@+id/settings_clear_history"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/settings_clear_history" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/dark_purple"
        app:layout_constraintBottom_toBottomOf="@+id/settings_clear_history" />

</androidx.constraintlayout.widget.ConstraintLayout>